<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTV"
        android:layout_marginTop="20dp"
        android:src="@drawable/main_img" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/textTV"
        android:layout_below="@+id/main_logo"
        android:paddingBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.ads.nativetemplates.TemplateView
                android:id="@+id/my_template"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:gnt_template_type="@layout/gnt_small_template_view" />

            <com.facebook.ads.NativeAdLayout
                android:id="@+id/native_ad_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>


    <TextView
        android:id="@+id/textTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/avi"
        android:gravity="center"
        android:text="@string/installing"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timerTxt"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:visibility="visible"
        app:indicatorColor="@color/white"
        app:indicatorName="PacmanIndicator" />


    <TextView
        android:id="@+id/timerTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>